# SE_FastAPI_Example_pri_adaptation

./: .gitignore  ReadMe.MD  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
fastapi/: Dockerfile  main.py
streamlit/: .env.example  Dockerfile  README.md  app.py  requirements.txt  utils.py
tests/: conftest.py  test_api.py  test_streamlit_helpers.py
